--- a/main.css
+++ b/main.css
@@ -44,14 +44,14 @@ body {
 /* 그리드 레이아웃 */
 .grid-2-cols {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 24px;
   margin-bottom: 24px;
 }
 
 .grid-5-cols {
   display: grid;
-  grid-template-columns: 300px 1fr 1fr 1fr 1fr;
+  grid-template-columns: 200px 300px 225px 250px 200px;
   gap: 10px;
   margin-bottom: 24px;
 }
